testing git workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: npm ci --legacy-peer-deps || { echo "npm ci failed"; exit 1; }
 
-      - name: Build React
+      - name: Build React Vite
         run: npm run build || { echo "Build failed"; exit 1; }
 
       - name: Run tests
@@ -43,7 +43,7 @@ jobs:
         continue-on-error: true
 
       - name: List built files
-        run: ls -la build || echo "Build directory not found, check package.json"
+        run: ls -la dist || echo "Build directory not found, check vite.config.js"
         shell: bash
         continue-on-error: true
 
@@ -80,11 +80,12 @@ jobs:
             git remote set-url origin https://github.com/Techevery/RentEase_Frontend.git
             git fetch origin || { echo "Git fetch failed"; exit 1; }
             git checkout main || { echo "Git checkout failed"; exit 1; }
+            git reset --hard origin/main || { echo "Git reset failed"; exit 1; }
             git pull origin main || { echo "Git pull failed"; exit 1; }
             echo "Current commit: $(git rev-parse HEAD)"
             npm ci --legacy-peer-deps || { echo "npm ci failed"; exit 1; }
             npm run build || { echo "Build failed"; exit 1; }
             echo "Built files:"
-            ls -la build
+            ls -la dist
             echo "Deployment completed"
             sudo systemctl reload nginx || { echo "Nginx reload failed"; exit 1; }
